--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,16 +1,26 @@
 .container {
   width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
+  padding: 0 10px;
 }
 
-// @media screen and (min-width 480px) {
-//   .container {
-//     max-width: 480px;
-//     padding: 0 15px;
-//   }
-// }
-// @media screen and (min-width 768px) {
-//   .container {
-//   }
-// } ;
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1600px;
+    padding: 0 15px;
+  }
+} ;
