--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,3 +1,25 @@
+.hero {
+  text-align: center;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-mob.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 480px 400px;
+}
+.hero-title {
+  font-family: Roboto, sans-serif;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.615;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  color: #ffffff;
+}
+
 .hero-heading {
   display: inline-block;
   justify-content: center;
@@ -6,32 +28,68 @@
   padding-bottom: 118px;
 }
 
-// .hero {
-//   margin-right: auto;
-//   margin-left: auto;
-//   padding-top: 200px;
-//   padding-bottom: 200px;
-//   max-width: 1600px;
-//   height: 600px;
-//   text-align: center;
-//   background-color: #c4c4c4;
-//   background-image: linear-gradient(
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url("../images/hero.jpg");
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   background-position: center;
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-mob@2x.jpg");
+  }
+}
 
-//   &-title {
-//     padding-bottom: 30px;
-//     font-family: Roboto, sans-serif;
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 1.5;
-//     letter-spacing: 0.06em;
-//     text-transform: uppercase;
-//     color: var(--primary-white-color);
-//   }
-// }
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-tab.jpg");
+    background-size: 768px 400px;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-tab@2x.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-desk.jpg");
+    background-size: 1600px 600px;
+    margin: 0 auto;
+  }
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.5;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+  }
+  .hero-heading {
+    padding-top: 200px;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-desk@2x.jpg");
+  }
+}
