--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -1,222 +1,222 @@
-.backdrop {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-  transition-property: opacity, visibility;
-  transition-duration: 400ms;
-  transition-timing-function: var(--timing);
+// .backdrop {
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.1);
+//   transition-property: opacity, visibility;
+//   transition-duration: 400ms;
+//   transition-timing-function: var(--timing);
 
-  &.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+//   &.is-hidden {
+//     opacity: 0;
+//     visibility: hidden;
+//     pointer-events: none;
 
-    & .modal {
-      transform: translate(-50%, -50%) scale(0);
-    }
-  }
-  .modal {
-    position: absolute;
-    padding: 40px;
-    top: 50%;
-    left: 50%;
-    width: 528px;
-    min-height: 581px;
-    background-color: #fff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    transform: translate(-50%, -50%) scale(1);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
+//     & .modal {
+//       transform: translate(-50%, -50%) scale(0);
+//     }
+//   }
+//   .modal {
+//     position: absolute;
+//     padding: 40px;
+//     top: 50%;
+//     left: 50%;
+//     width: 528px;
+//     min-height: 581px;
+//     background-color: #fff;
+//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//       0px 2px 1px rgba(0, 0, 0, 0.2);
+//     border-radius: 4px;
+//     transform: translate(-50%, -50%) scale(1);
+//     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
 
 /*MODAL BUTTONS*/
 
-.modal-btn {
-  cursor: pointer;
-  min-width: 200px;
-  padding: 10px 32px;
-  font-family: Roboto, sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  background-color: #2196f3;
-  color: var(--primary-white-color);
-  border: none;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+// .modal-btn {
+//   cursor: pointer;
+//   min-width: 200px;
+//   padding: 10px 32px;
+//   font-family: Roboto, sans-serif;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.875;
+//   letter-spacing: 0.06em;
+//   background-color: #2196f3;
+//   color: var(--primary-white-color);
+//   border: none;
+//   border-radius: 4px;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+// }
 
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 8px;
-  padding: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  background-color: var(--primary-white-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    fill: var(--accent-color);
-  }
-}
+// .close-btn {
+//   position: absolute;
+//   top: 10px;
+//   right: 8px;
+//   padding: 0px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 30px;
+//   height: 30px;
+//   background-color: var(--primary-white-color);
+//   border: 1px solid rgba(0, 0, 0, 0.1);
+//   border-radius: 50%;
+//   cursor: pointer;
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     fill: var(--accent-color);
+//   }
+// }
 
-.modal-form-button {
-  display: block;
+// .modal-form-button {
+//   display: block;
 
-  width: 200px;
-  height: 50px;
-  cursor: pointer;
-  padding: 10px 55px;
-  margin-right: auto;
-  margin-left: auto;
+//   width: 200px;
+//   height: 50px;
+//   cursor: pointer;
+//   padding: 10px 55px;
+//   margin-right: auto;
+//   margin-left: auto;
 
-  font-family: Roboto, sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  background-color: #2196f3;
-  color: var(--primary-white-color);
-  border: none;
-  border-radius: 4px;
+//   font-family: Roboto, sans-serif;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.875;
+//   letter-spacing: 0.06em;
+//   background-color: #2196f3;
+//   color: var(--primary-white-color);
+//   border: none;
+//   border-radius: 4px;
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
 
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-/* END MODAL BUTTONS*/
+//     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+// /* END MODAL BUTTONS*/
 
-.modal-title {
-  display: inline-block;
-  margin-bottom: 12px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
+// .modal-title {
+//   display: inline-block;
+//   margin-bottom: 12px;
+//   font-family: Roboto, sans-serif;
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 20px;
+//   line-height: 23px;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: var(--primary-text-color);
+// }
 
-.modal-form {
-  display: flex;
-  flex-direction: column;
-}
-.modal-form-input-wrapper {
-  display: block;
-  position: relative;
-  margin-top: 4px;
-}
-.modal-form-field:not(:last-child) {
-  margin-bottom: 10px;
-}
-.modal-form-field {
-  color: var(--title-text-color);
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.171;
-  letter-spacing: 0.01em;
-}
-.modal-form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 42px;
-  cursor: pointer;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// .modal-form {
+//   display: flex;
+//   flex-direction: column;
+// }
+// .modal-form-input-wrapper {
+//   display: block;
+//   position: relative;
+//   margin-top: 4px;
+// }
+// .modal-form-field:not(:last-child) {
+//   margin-bottom: 10px;
+// }
+// .modal-form-field {
+//   color: var(--title-text-color);
+//   font-weight: 400;
+//   font-size: 12px;
+//   line-height: 1.171;
+//   letter-spacing: 0.01em;
+// }
+// .modal-form-input {
+//   width: 100%;
+//   height: 40px;
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+//   padding-left: 42px;
+//   cursor: pointer;
+//   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:focus {
-    outline: none;
-    border-color: var(--accent-color);
-  }
-}
+//   &:focus {
+//     outline: none;
+//     border-color: var(--accent-color);
+//   }
+// }
 
-.modal-form-input:focus + .user-icon {
-  fill: var(--accent-color);
-}
-.user-icon {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form-message {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.01em;
+// .modal-form-input:focus + .user-icon {
+//   fill: var(--accent-color);
+// }
+// .user-icon {
+//   display: block;
+//   position: absolute;
+//   top: 50%;
+//   left: 12px;
+//   transform: translateY(-50%);
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
+// .modal-form-message {
+//   font-family: Roboto, sans-serif;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 16px;
+//   letter-spacing: 0.01em;
 
-  width: 100%;
-  height: 120px;
-  padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 4px;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   width: 100%;
+//   height: 120px;
+//   padding: 12px 16px;
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+//   cursor: pointer;
+//   margin-top: 4px;
+//   resize: none;
+//   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:focus {
-    outline: none;
-    border-color: var(--accent-color);
-  }
-}
+//   &:focus {
+//     outline: none;
+//     border-color: var(--accent-color);
+//   }
+// }
 
-.modal-form-policy-text {
-  display: flex;
-  align-items: center;
-  margin-top: 9px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  margin-bottom: 30px;
+// .modal-form-policy-text {
+//   display: flex;
+//   align-items: center;
+//   margin-top: 9px;
+//   font-family: Roboto, sans-serif;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 24px;
+//   letter-spacing: 0.03em;
+//   margin-bottom: 30px;
 
-  &::before {
-    content: "";
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border: var(--primary-text-color) 1px solid;
-    border-radius: 2px;
-    margin-right: 8px;
-  }
-}
+//   &::before {
+//     content: "";
+//     display: inline-block;
+//     width: 16px;
+//     height: 16px;
+//     border: var(--primary-text-color) 1px solid;
+//     border-radius: 2px;
+//     margin-right: 8px;
+//   }
+// }
 
-.modal-policy-link {
-  color: var(--accent-color);
-  text-decoration: underline;
-  padding-left: 4px;
-}
+// .modal-policy-link {
+//   color: var(--accent-color);
+//   text-decoration: underline;
+//   padding-left: 4px;
+// }
 
-.modal-form-policy:checked + .modal-form-policy-text::before {
-  background-image: url("..//images/check.png");
-  background-repeat: no-repeat;
-  border: none;
-  background-color: var(--accent-color);
-}
+// .modal-form-policy:checked + .modal-form-policy-text::before {
+//   background-image: url("..//images/check.png");
+//   background-repeat: no-repeat;
+//   border: none;
+//   background-color: var(--accent-color);
+// }
