--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1600px;
+    max-width: 1200px;
     padding: 0 15px;
   }
 }
@@ -210,6 +210,7 @@ body {
 
 .descriptions {
   margin-top: 10px;
+  min-height: 75px;
   font-family: Roboto, sans-serif;
   font-weight: 400px;
   font-size: 14px;
@@ -227,7 +228,6 @@ body {
   .advantages-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
@@ -236,6 +236,23 @@ body {
   }
   .icon-wrapper {
     width: 354px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages {
+    flex-wrap: nowrap;
+    width: 1170px;
+    margin: 0;
+    padding: 94px 0;
+  }
+  .advantages-list:not(:last-child) {
+    margin-right: 30px;
+  }
+  .icon-wrapper {
+    width: 270px;
+    margin-bottom: 30px;
   }
 }
 
@@ -245,6 +262,22 @@ body {
 /* TEAM */
 /*END clients-section */
 /*MODAL BUTTONS*/
+.modal-btn {
+  cursor: pointer;
+  min-width: 200px;
+  padding: 10px 32px;
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  background-color: #2196f3;
+  color: var(--primary-white-color);
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 /*BUTTON FILTER*/
 .button-section {
   display: flex;
