--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -36,21 +36,21 @@
 
 /*MODAL BUTTONS*/
 
-// .modal-btn {
-//   cursor: pointer;
-//   min-width: 200px;
-//   padding: 10px 32px;
-//   font-family: Roboto, sans-serif;
-//   font-weight: 700;
-//   font-size: 16px;
-//   line-height: 1.875;
-//   letter-spacing: 0.06em;
-//   background-color: #2196f3;
-//   color: var(--primary-white-color);
-//   border: none;
-//   border-radius: 4px;
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-// }
+.modal-btn {
+  cursor: pointer;
+  min-width: 200px;
+  padding: 10px 32px;
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  background-color: #2196f3;
+  color: var(--primary-white-color);
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 
 // .close-btn {
 //   position: absolute;
