--- a/css/main.css
+++ b/css/main.css
@@ -244,11 +244,10 @@ body {
   .advantages {
     flex-wrap: nowrap;
     width: 1170px;
-    margin: 0;
-    padding: 94px 0;
+    padding: 94px -15px;
   }
-  .advantages-list:not(:last-child) {
-    margin-right: 30px;
+  .advantages-list {
+    width: calc((100% - 8 * 15px) / 4);
   }
   .icon-wrapper {
     width: 270px;
