--- a/css/main.css
+++ b/css/main.css
@@ -255,10 +255,130 @@ body {
   }
 }
 
-/* END ADVANTEGES */
 /* EMPLOYMENT */
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .employment-box {
+    display: none;
+  }
+}
+
+.employment {
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.employment-list:not(:last-child) {
+  margin-right: 30px;
+}
+
+.employment-list {
+  position: relative;
+}
+
+.employment-position {
+  position: absolute;
+  text-align: center;
+  padding: 27px 0;
+  bottom: 0;
+  width: 370px;
+  min-height: 70px;
+  color: white;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.section-title {
+  padding-top: 94px;
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+  counter-reset: var(--primary-text-color);
+  color: var(--primary-text-color);
+  padding-bottom: 50px;
+}
+
 /* END EMPLOYMENT */
 /* TEAM */
+.team {
+  background-color: #f5f4fa;
+}
+
+.section-title {
+  padding-top: 60px;
+  padding-bottom: 30px;
+}
+
+.team-box {
+  align-items: center;
+}
+
+.descriptions-list {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
+}
+
+.team-name-title {
+  text-align: center;
+  margin-top: 30px;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.188;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.descriptions-list .descriptions {
+  text-align: center;
+  min-height: 10px;
+  margin-top: 10px;
+  font-family: Roboto, sans-serif;
+  font-weight: 400px;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.social-list-wrapper {
+  margin-top: 16px;
+  padding-bottom: 24px;
+}
+
+.social-list-svg {
+  display: flex;
+  justify-content: center;
+}
+
+.descriptions-list-svg:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-link-svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: #afb1b8;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link-svg:hover,
+.social-link-svg:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+
+.social-icon-svg {
+  fill: currentColor;
+}
+
 /*END clients-section */
 /*MODAL BUTTONS*/
 .modal-btn {
