--- a/sass/layout/_main-content.scss
+++ b/sass/layout/_main-content.scss
@@ -118,22 +118,10 @@
 }
 /* END EMPLOYMENT */
 
-// .section-title {
-//   padding-top: 94px;
-//   font-family: Roboto, sans-serif;
-//   font-weight: 700;
-//   font-size: 36px;
-//   line-height: 1.167;
-//   text-align: center;
-//   letter-spacing: 0.03em;
-//   counter-reset: var(--primary-text-color);
-//   color: var(--primary-text-color);
-//   padding-bottom: 50px;
-// }
-
 /* TEAM */
 .team {
   background-color: #f5f4fa;
+  padding-bottom: 60px;
 }
 .section-title {
   padding-top: 60px;
@@ -147,8 +135,8 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-bottom: 30px;
 }
+
 .team-name-title {
   text-align: center;
   margin-top: 30px;
@@ -199,87 +187,86 @@
 .social-icon-svg {
   fill: currentColor;
 }
+@media screen and (max-width: 767px) {
+  .descriptions-list:not(:first-child) {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .descriptions-list {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
 
-// .team {
-//   background-color: #f5f4fa;
-
-//   &-box {
-//     display: flex;
-//     justify-content: space-between;
-//     padding-bottom: 94px;
-//   }
-//   &:not(:last-child) {
-//     margin-right: 30px;
-//   }
-//   &-name-title {
-//     text-align: center;
-//     margin-top: 30px;
-//     font-family: Roboto, sans-serif;
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 1.188;
-//     letter-spacing: 0.03em;
-//     color: var(--primary-text-color);
-//   }
-
-//   .descriptions-list {
-//     background: #ffffff;
-//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//       0px 2px 1px rgba(0, 0, 0, 0.2);
-//     border-radius: 0px 0px 4px 4px;
-
-//     & .descriptions {
-//       margin-top: 10px;
-//       font-family: Roboto, sans-serif;
-//       font-weight: 400px;
-//       font-size: 14px;
-//       line-height: 1.714;
-//       letter-spacing: 0.03em;
-//       color: var(--title-text-color);
-//     }
-//     & .descriptions {
-//       text-align: center;
-//     }
-//     &-svg:not(:last-child) {
-//       margin-right: 10px;
-//     }
-//   }
-
-//   .social-list-wrapper {
-//     margin-top: 16px;
-//     padding-right: 32px;
-//     padding-left: 32px;
-//     padding-bottom: 30px;
-
-//     border-radius: 0px 0px 4px 4px;
-//   }
-//   .social-list-svg {
-//     display: flex;
-//     justify-content: space-around;
-//   }
-
-//   .social-link-svg {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     width: 44px;
-//     height: 44px;
-//     border-radius: 50%;
-//     color: #afb1b8;
-//     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     &:hover,
-//     &:focus {
-//       color: var(--primary-white-color);
-//       background-color: var(--accent-color);
-//     }
-//   }
-//   .social-icon-svg {
-//     fill: currentColor;
-//   }
-// }
-// /*END  TEAM */
+@media screen and (min-width: 1200px) {
+  .team-box {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-bottom: 94px;
+  }
+  .descriptions-list:not(:last-child) {
+    margin-right: 30px;
+  }
+}
 
 // /*clients-section */
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 60px;
+}
+
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: #afb1b8;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+  }
+  &:hover .clients-icon {
+    fill: currentColor;
+  }
+}
+.clients-icon {
+  fill: currentColor;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .clients-items {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-items {
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+  .clients-list {
+    margin: -15px;
+  }
+}
 // .clients-list {
 //   display: flex;
 //   justify-content: space-between;
@@ -314,4 +301,4 @@
 //     }
 //   }
 // }
-/*END clients-section */
+/*END clients section */
