--- a/css/main.css
+++ b/css/main.css
@@ -120,12 +120,12 @@ body {
   top: 100%;
   left: 0;
   width: 100%;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  height: 453px;
   background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  border: 1px solid #ececec;
   display: inline;
   text-align: center;
+  transform: translate(0, 0) scale(1);
 }
 
 .header-list.is-open {
@@ -134,6 +134,14 @@ body {
 
 .header {
   position: relative;
+}
+
+[data-menu] {
+  display: none;
+}
+
+[data-menu].is-open {
+  display: block;
 }
 
 .navigation_list {
@@ -164,6 +172,7 @@ body {
 }
 
 .current-nav-link {
+  display: inline-block;
   position: relative;
   padding-bottom: 8px;
   color: var(--accent-color);
@@ -174,7 +183,6 @@ body {
   width: 100%;
   height: 4px;
   display: block;
-  position: absolute;
   bottom: 0;
   background-color: var(--accent-color);
   border-radius: 2px;
@@ -186,6 +194,11 @@ body {
   padding: 0;
   border: none;
   background-color: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button:hover, .menu-button:focus {
+  fill: var(--accent-color);
 }
 
 .menu-button .icon-close {
@@ -202,6 +215,7 @@ body {
 
 .address {
   margin-left: auto;
+  margin-bottom: 45px;
   font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 14px;
