--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,19 +11,30 @@
   top: 100%;
   left: 0;
   width: 100%;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  height: 453px;
+
   background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+  border: 1px solid #ececec;
   display: inline;
   text-align: center;
+  transform: translate(0, 0) scale(1);
+
   &.is-open {
     display: block;
   }
 }
+
 .header {
   position: relative;
 }
+[data-menu] {
+  display: none;
+}
+[data-menu].is-open {
+  display: block;
+}
+
 .navigation_list {
   display: block;
   margin-bottom: 60px;
@@ -50,6 +61,7 @@
   color: var(--accent-color);
 }
 .current-nav-link {
+  display: inline-block;
   position: relative;
   padding-bottom: 8px;
   color: var(--accent-color);
@@ -59,7 +71,7 @@
   width: 100%;
   height: 4px;
   display: block;
-  position: absolute;
+
   bottom: 0;
   background-color: var(--accent-color);
   border-radius: 2px;
@@ -71,6 +83,11 @@
   padding: 0;
   border: none;
   background-color: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 .menu-button .icon-close {
   display: none;
@@ -84,6 +101,7 @@
 
 .address {
   margin-left: auto;
+  margin-bottom: 45px;
   font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 14px;
