--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,190 @@
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+.footer-address {
+  text-align: center;
+}
+.footer-logo {
+  font-family: Raleway;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+.footer-list-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.footer-list {
+  margin-top: 20px;
+}
+.footer-list-nav {
+  font-family: Roboto, sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+}
+.footer-list-link {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-social-link {
+  text-align: center;
+  margin-top: 60px;
+}
+.footer-join-title {
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.231;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+}
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.footer-social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-social-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--primary-white-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+  .footer-social-svg {
+    fill: currentColor;
+  }
+}
+.footer-form {
+  display: block;
+  text-align: center;
+}
+
+.footer-form-title {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.143;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+}
+.footer-form-field {
+  padding-left: 16px;
+  width: 450px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.6);
+  border-radius: 4px;
+  background-color: transparent;
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+.content-button {
+  display: flex;
+  justify-content: center;
+}
+.footer-form-button {
+  display: flex;
+  align-items: center;
+  align-self: flex-end;
+  padding: 10px 28px;
+  width: 200px;
+  height: 50px;
+  margin-top: 20px;
+
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+
+  &-icon {
+    margin-left: 10px;
+    fill: var(--primary-white-color);
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-flex {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+  .footer-social-link {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-wrapper {
+    display: flex;
+    align-items: baseline;
+  }
+  .footer-address {
+    margin-right: 70px;
+  }
+  .footer-list {
+    text-align: left;
+    width: 231px;
+  }
+  .footer-social-link {
+    margin-right: 93px;
+  }
+  .footer-join-title {
+    text-align: left;
+  }
+  .footer-form {
+    display: flex;
+  }
+  .footer-form-title {
+    text-align: left;
+    margin-top: 0;
+  }
+  .footer-form-field {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
 // .footer {
 //   padding-top: 60px;
 //   padding-bottom: 60px;
