--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,7 @@ body {
 
 .header {
   position: relative;
+  border-bottom: 1px solid #ececec;
 }
 
 [data-menu] {
@@ -968,6 +969,7 @@ body {
     align-items: baseline;
   }
   .footer-address {
+    text-align: left;
     margin-right: 70px;
   }
   .footer-list {
@@ -1279,12 +1281,15 @@ body {
   width: 100%;
 }
 
-.portfolio-list .portfolio-list:hover,
-.portfolio-list .portfolio-list:focus {
+.portfolio-list:hover, .portfolio-list:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list .portfolio-list .photo-transition {
+  display: block;
+}
+
+.portfolio-list .photo-transition {
   display: block;
 }
 
@@ -1373,6 +1378,16 @@ body {
   }
   .portfolio-border {
     padding: 20px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+  .section {
+    padding-bottom: 18px;
   }
 }
 /*# sourceMappingURL=main.css.map */
