--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,6 @@ h6 {
 
 img {
   display: block;
-  max-width: 100%;
   height: auto;
 }
 
@@ -116,6 +115,7 @@ body {
 
 .header-list {
   display: none;
+  z-index: 5;
   position: absolute;
   top: 100%;
   left: 0;
@@ -155,8 +155,6 @@ body {
 }
 
 .navigation_list-link {
-  padding-top: 32px;
-  padding-bottom: 32px;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -216,7 +214,6 @@ body {
 
 .address {
   margin-left: auto;
-  margin-bottom: 60px;
   font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -301,6 +298,13 @@ body {
   fill: currentColor;
 }
 
+@media screen and (max-width: 767px) {
+  .header-list {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .menu-button {
     display: none;
@@ -347,6 +351,8 @@ body {
     padding-top: 21px;
   }
   .navigation_list-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: block;
     padding-bottom: 32px;
     font-family: Roboto;
@@ -1234,6 +1240,10 @@ body {
   }
 }
 
+img {
+  width: 100%;
+}
+
 .section {
   padding-top: 45px;
   padding-bottom: 60px;
@@ -1336,7 +1346,6 @@ body {
 }
 
 .portfolio-border .portfolio-title {
-  margin-top: 20px;
   margin-bottom: 4px;
   font-family: Roboto, sans-serif;
   font-weight: 700;
