--- a/sass/portfolio/_portfolio-content.scss
+++ b/sass/portfolio/_portfolio-content.scss
@@ -148,7 +148,8 @@ img {
     margin: 15px;
   }
   .section {
-    padding-bottom: 18px;
+    padding-bottom: 50px;
+    padding-top: 94px;
   }
 }
 // .button-section {
