--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -63,13 +63,21 @@
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    background-size: 1600px 600px;
+    margin: 0 auto;
+    max-width: 1600px;
+    height: 600px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url("../images/hero-desk.jpg");
-    background-size: 1600px 600px;
     margin: 0 auto;
+    max-width: 1600px;
+    height: 600px;
   }
   .hero-title {
     font-size: 44px;
