убрал фиксированую высоту героя

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -69,7 +69,7 @@
     background-size: 1600px 600px;
     margin: 0 auto;
     max-width: 1600px;
-    height: 600px;
+    min-height: 600px;
     background-image: url("../images/hero-desk.jpg");
   }
   .hero-title {
