--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,7 @@ body {
     background-size: 1600px 600px;
     margin: 0 auto;
     max-width: 1600px;
-    height: 600px;
+    min-height: 600px;
     background-image: url("../images/hero-desk.jpg");
   }
   .hero-title {
